--- a/diarrhea_cases.ipynb
+++ b/diarrhea_cases.ipynb
@@ -258,13 +258,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 59,
    "metadata": {},
    "outputs": [
@@ -556,24 +549,6 @@
     "\n",
     "    return output_df"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 119,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "10"
-      ]
-     },
-     "execution_count": 119,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -2326,7 +2301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2341,7 +2316,7 @@
     }
    ],
    "source": [
-    "plot_singlepred_interpol(135)"
+    "plot_singlepred_interpol(135) # district with zero observation values"
    ]
   },
   {
