added sarimax exploration notebook
Co-authored-by: rumbidzaigwinji <rumbidzaimgwinji.com>
Co-authored-by: benedict <59194091+Bwhiz@users.noreply.github.com>

--- a/notebooks/sarimax_exploration.ipynb
+++ b/notebooks/sarimax_exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,6 +12,7 @@
     "import numpy as np\n",
     "import seaborn as sns\n",
     "from sklearn.feature_selection import mutual_info_regression\n",
+    "from tqdm.auto import tqdm\n",
     "import warnings\n",
     "\n",
     "warnings.filterwarnings('ignore')\n",
@@ -2174,14 +2175,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# train_data = df[df['datetime'] < '2018-03-01']\n",
-    "# test_data = df[(df['datetime'] >= '2018-03-01')]\n",
-    "# eval_data = df[df['datetime'] > '2018-06-01'].reset_index()\n",
-    "\n",
     "train_data = df[df.index < '2018-03-01']\n",
     "test_data = df[df.index >= '2018-03-01']\n"
    ]
@@ -2360,7 +2357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2381,8 +2378,7 @@
     "    ticks = list(scores.index)\n",
     "    plt.barh(width, scores)\n",
     "    plt.yticks(width, ticks)\n",
-    "    plt.title(\"Mutual Information Scores\")\n",
-    "\n"
+    "    plt.title(\"Mutual Information Scores\")"
    ]
   },
   {
@@ -2913,15 +2909,6 @@
     "})\n",
     "\n",
     "    return output_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 113,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from tqdm.auto import tqdm"
    ]
   },
   {
